[gd_scene load_steps=2 format=3 uid="uid://by8gg4bf4bqpj"]

[ext_resource type="Script" uid="uid://4c3hohxdk8if" path="res://addons/quest_weaver/ui/node_properties/synchronize_node_editor.gd" id="1_4h06t"]

[node name="SynchronizeNodeEditor" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4h06t")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
text = "Completion Mode: "

[node name="CompletionModePicker" type="OptionButton" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "WAIT_FOR_ALL"
popup/item_0/id = 0
popup/item_1/text = "WAIT_FOR_ANY"
popup/item_1/id = 1
popup/item_2/text = "WAIT_FOR_N_INPUTS"
popup/item_2/id = 2

[node name="RequiredInputsLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Required Inputs: "

[node name="RequiredInputsSpinBox" type="SpinBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 2.0
max_value = 16.0
value = 2.0

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AddInputButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Add Input"

[node name="AddOutputButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Add Output"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Input Ports"

[node name="InputsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Output Ports"

[node name="OutputsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
